name:          tasty-bench
version:       0.2
cabal-version: >=1.10
build-type:    Simple
license:       MIT
license-file:  LICENSE
copyright:     2021 Andrew Lelechenko
maintainer:    Andrew Lelechenko <andrew.lelechenko@gmail.com>
homepage:      https://github.com/Bodigrim/tasty-bench
bug-reports:   https://github.com/Bodigrim/tasty-bench/issues
category:      Development, Performance, Testing, Benchmarking
synopsis:      Featherlight benchmark framework
description:
  Featherlight framework (only one file!)
  for performance measurement with API mimicking
  @criterion@ and @gauge@, featuring built-in comparison
  against baseline. Our benchmarks are just
  regular @tasty@ tests.

extra-source-files:
  changelog.md
  README.md

tested-with: GHC==9.0.1, GHC==8.10.3, GHC==8.8.4, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

source-repository head
  type: git
  location: https://github.com/Bodigrim/tasty-bench

library
  exposed-modules:  Test.Tasty.Bench
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -O2 -Wall -fno-warn-unused-imports

  build-depends:
    base >= 4.3 && < 5,
    containers >= 0.4,
    deepseq >= 1.1,
    tasty >= 1.2.3
  if impl(ghc < 7.8)
    build-depends:
      tagged >= 0.2
